src/test/deca/context/valid/oracle/public_attribute.deca
class A {
    int x;
    int y = 0;
}

{
    A a = new A();
    print(a.x, a.y);
}