src/test/deca/context/invalid/oracle/binary_op_mult_with_one_class_and_att.deca
class A{
    int x;
}

{
    A a = new A();
    a * a.x;
}